add portfolio with links

--- a/index.html
+++ b/index.html
@@ -76,44 +76,43 @@
 					<div class="row">
 						<div class="4u 12u$(mobile)">
 							<article class="item">
-								<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="https://murmuring-lake-27428.herokuapp.com/" class="image fit"><img src="images/bookmaker.png" alt="" /></a>
 								<header>
-									<h3>Bookmaker App</h3>
-									<p>a book authoring app in rails</p>
+									<h3>Bookmaker App <br>(rails)</h3>
 								</header>
 							</article>
 							<article class="item">
-								<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+								<a href="http://boasbabs.github.io/shayhowe/" class="image fit"><img src="images/conference.png" alt="conference_website_sample" /></a>
 								<header>
-									<h3>Rhoncus Semper</h3>
+									<h3>Conference Website <br>(HTML/CSS)</h3>
 								</header>
 							</article>
 						</div>
 						<div class="4u 12u$(mobile)">
 							<article class="item">
-								<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+								<a href="http://boasbabs.github.io/2048/" class="image fit"><img src="images/2048-game.png" alt="" /></a>
 								<header>
-									<h3>Magna Nullam</h3>
+									<h3>2048 <br>(HTML/CSS)</h3>
 								</header>
 							</article>
 							<article class="item">
-								<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+								<a href="http://boasbabs.github.io/weatherApp/" class="image fit"><img src="images/weather-app.png" alt="weather-forecast" /></a>
 								<header>
-									<h3>Natoque Vitae</h3>
+									<h3>Weather Forecast App <br>(AngularJs)</h3>
 								</header>
 							</article>
 						</div>
 						<div class="4u$ 12u$(mobile)">
 							<article class="item">
-								<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+								<a href="http://boasbabs.github.io/computerSolutions/" class="image fit"><img src="images/computer-solutions.png" alt="computer-solutions-image" /></a>
 								<header>
-									<h3>Dolor Penatibus</h3>
+									<h3>Computer Solutions <br>(AngularJs)</h3>
 								</header>
 							</article>
 							<article class="item">
-								<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+								<a href="http://boasbabs.github.io/gamehack-snake/" class="image fit"><img src="images/snake-game.png" alt="" /></a>
 								<header>
-									<h3>Orci Convallis</h3>
+									<h3>Snake Game <br>(Javascript/HTML/CSS)</h3>
 								</header>
 							</article>
 						</div>
@@ -130,15 +129,10 @@
 							<h2>About Me</h2>
 						</header>
 
-						<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/aboutme.jpg" alt="" /></a>
 
-						<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-						ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-						laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-						parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-						dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-						ornare iaculis.</p>
-
+						<p>Love and aI kickstarted my rewarding journey into Web development after two years of working in a construction holding first degree in Electronic Electrical Engineering. Outstanding and functional website are irresistible to me.<p>
+						<p>My <em>super hero powers</em> are in <strong>Ruby on Rails, AngularJS, Javascript, HTML/CSS</strong> with special abilities in <strong>Git and Heroku</strong>. Oops!, I forgot to mention that CorelDraw and Photoshop are not aliens to me.</p>
 					</div>
 				</section>
 
@@ -150,11 +144,12 @@
 							<h2>Contact</h2>
 						</header>
 
-						<p>Elementum sem parturient nulla quam placerat viverra
-						mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-						donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-						orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
-
+						<p>You can reach me at arms length. </p>
+	    				<p>No 4, Yakubu Street, off Jimoh Balogun, Ketu Ikosi, 
+	    					<br> Lagos State, Nigeria <br>
+	    					<strong>+2348053303926 | babalolasimeon@gmail.com</strong>
+	    				</p>
+						
 						<form method="post" action="#">
 							<div class="row">
 								<div class="6u 12u$(mobile)"><input type="text" name="name" placeholder="Name" /></div>
@@ -177,7 +172,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; 2015. All rights reserved.</li>>
 					</ul>
 
 			</div>
