--- a/index.html
+++ b/index.html
@@ -20,14 +20,6 @@
 			</div>
 		<!-- Nav -->
 			<nav id="nav">
-				<!--
-					Prologue's nav expects links in one of two formats:
-					1. Hash link (scrolls to a different section within the page)
-					   <li><a href="#foobar" id="foobar-link" class="icon fa-whatever-icon-you-want skel-layers-ignoreHref"><span class="label">Foobar</span></a></li>
-
-					2. Standard link (sends the user to another page/site)
-					   <li><a href="http://foobar.tld" id="foobar-link" class="icon fa-whatever-icon-you-want"><span class="label">Foobar</span></a></li>
-				-->
 				<ul>
 					<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Intro</span></a></li>
 					<li><a href="#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Portfolio</span></a></li>
@@ -78,7 +70,7 @@
 							<article class="item">
 								<a href="https://murmuring-lake-27428.herokuapp.com/" class="image fit"><img src="images/bookmaker.png" alt="" /></a>
 								<header>
-									<h3>Bookmaker App <br>(rails)</h3>
+									<h3>Bookmaker App <br>(Ruby on Rails)</h3>
 								</header>
 							</article>
 							<article class="item">
@@ -131,7 +123,7 @@
 
 						<a href="#" class="image featured"><img src="images/aboutme.jpg" alt="" /></a>
 
-						<p>Love and aI kickstarted my rewarding journey into Web development after two years of working in a construction holding first degree in Electronic Electrical Engineering. Outstanding and functional website are irresistible to me.<p>
+						<p>I kickstarted my rewarding journey into Web development after two years of working in a construction holding first degree in Electronic Electrical Engineering. Outstanding and functional website are irresistible to me.<p>
 						<p>My <em>super hero powers</em> are in <strong>Ruby on Rails, AngularJS, Javascript, HTML/CSS</strong> with special abilities in <strong>Git and Heroku</strong>. Oops!, I forgot to mention that CorelDraw and Photoshop are not aliens to me.</p>
 					</div>
 				</section>
@@ -150,7 +142,7 @@
 	    					<strong>+2348053303926 | babalolasimeon@gmail.com</strong>
 	    				</p>
 						
-						<form method="post" action="#">
+						<form method="POST" action="https://formspree.io/babalolasimeon@gmail.com">
 							<div class="row">
 								<div class="6u 12u$(mobile)"><input type="text" name="name" placeholder="Name" /></div>
 								<div class="6u$ 12u$(mobile)"><input type="text" name="email" placeholder="Email" /></div>
@@ -169,12 +161,10 @@
 
 		<!-- Footer -->
 			<div id="footer">
-
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; 2015. All rights reserved.</li>>
+						<li>&copy; 2015. Babalola Adeyemi Simeon All rights reserved.</li>
 					</ul>
-
 			</div>
 
 		<!-- Scripts -->
