--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Babalola Adeyemi Simeon Portfolio</title>
+		<title>Babalola Adeyemi Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -14,7 +14,7 @@
 		<div class="top">
 			<!-- Logo -->
 			<div id="logo">
-				<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+				<span class="image avatar48"><img src="images/avatar.jpg" alt="babalola-adeyemi-simeon-image" /></span>
 				<h1 id="title">Babalola Adeyemi Simeon</h1>
 				<p>Full Stack Developer</p>
 			</div>
@@ -48,7 +48,7 @@
 					<header>
 						<h2 class="alt">Hi, I am <strong>Simeon</strong>,<br>
 						</h2>
-						<p>a<strong> fullstack developer</strong> with special interesting in<br />
+						<p>a<strong> fullstack developer</strong> with special interest in<br />
 						<strong>Ruby on Rails</strong> and <strong>AngularJS</strong>.</p>
 					</header>
 					<footer>
@@ -63,7 +63,7 @@
 						<h2>Portfolio</h2>
 					</header>
 
-					<p>This is samples of my works. I hope you are thrilled!</p>
+					<p>These are past projects I have implemented using various technologies. The core technology is specified below the project title.</p>
 
 					<div class="row">
 						<div class="4u 12u$(mobile)">
@@ -123,11 +123,10 @@
 
 						<a href="#" class="image featured"><img src="images/aboutme.jpg" alt="" /></a>
 
-						<p>I kickstarted my rewarding journey into Web development after two years of working in a construction holding first degree in Electronic Electrical Engineering. Outstanding and functional website are irresistible to me.<p>
 						<p>My <em>super hero powers</em> are in <strong>Ruby on Rails, AngularJS, Javascript, HTML/CSS</strong> with special abilities in <strong>Git and Heroku</strong>. Oops!, I forgot to mention that CorelDraw and Photoshop are not aliens to me.</p>
+						<p>My rewarding journey into Web development started after two years of working in a construction holding first degree in Electronic Electrical Engineering from a prestigious state university in Nigeria.<p>
 					</div>
 				</section>
-
 			<!-- Contact -->
 				<section id="contact" class="four">
 					<div class="container">
@@ -135,7 +134,6 @@
 						<header>
 							<h2>Contact</h2>
 						</header>
-
 						<p>You can reach me at arms length. </p>
 	    				<p>No 4, Yakubu Street, off Jimoh Balogun, Ketu Ikosi, 
 	    					<br> Lagos State, Nigeria <br>
@@ -147,7 +145,7 @@
 								<div class="6u 12u$(mobile)"><input type="text" name="name" placeholder="Name" /></div>
 								<div class="6u$ 12u$(mobile)"><input type="text" name="email" placeholder="Email" /></div>
 								<div class="12u$">
-									<textarea name="message" placeholder="Message"></textarea>
+									<textarea name="message" placeholder="This also works! I will reply in a jiffy"></textarea>
 								</div>
 								<div class="12u$">
 									<input type="submit" value="Send Message" />
@@ -163,7 +161,7 @@
 			<div id="footer">
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; 2015. Babalola Adeyemi Simeon All rights reserved.</li>
+						<li>&copy; 2016. Babalola Adeyemi Simeon | All rights reserved.</li>
 					</ul>
 			</div>
 
